--- a/cahier_des_charges/cahier_des_charges.tex
+++ b/cahier_des_charges/cahier_des_charges.tex
@@ -285,11 +285,13 @@ On conviendra que si aucun groupe ne participe à une séance, alors c'est toute
 
 \item Une séance ne peut pas durer plus de 4 heures.
 
+\item Aucune séance ne doit avoir lieu avant 8 heures, après 20 heures ou le week-end.
+
 \item La somme des durées des séances pour une UE donnée et un type de séance donné ne doit pas dépasser le nombre d'heures prévu pour cette UE pour ce type de séance.
 
-\item Aucune séance ne doit avoir lieu avant 8 heures ou après 20 heures.
-
 \item La date de début d'une séance ajoutée ou modifiée doit être postérieur au présent. Idem pour la date de début d'une indisponibilité.
+
+\item Une séance ne peut être retirée que par un utilisateur qui possède le droit d'administration pour le niveau de l'UE de la séance concernée.
 
 \item L'effectif de l'ensemble des groupes d'une promotion doit être égal à l'effectif de la promotion concernée.
 
